// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MenuButton matches snapshot when closed 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="Open menu"
    class="trigger"
    data-headlessui-state=""
    id="headlessui-menu-button-:r2:"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-ellipsis-vertical icon"
      fill="none"
      height="20"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="1"
      />
      <circle
        cx="12"
        cy="5"
        r="1"
      />
      <circle
        cx="12"
        cy="19"
        r="1"
      />
    </svg>
  </button>
</div>
`;

exports[`MenuButton matches snapshot when opened 1`] = `
<body>
  <div>
    <button
      aria-controls="headlessui-menu-items-:r9:"
      aria-expanded="true"
      aria-haspopup="menu"
      aria-label="Open menu"
      class="trigger"
      data-active=""
      data-headlessui-state="open active"
      data-open=""
      id="headlessui-menu-button-:r8:"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-ellipsis-vertical icon"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="1"
        />
        <circle
          cx="12"
          cy="5"
          r="1"
        />
        <circle
          cx="12"
          cy="19"
          r="1"
        />
      </svg>
    </button>
  </div>
  <div
    id="headlessui-portal-root"
  >
    <div
      data-headlessui-portal=""
    >
      <div
        aria-labelledby="headlessui-menu-button-:r8:"
        class="items"
        data-anchor="bottom start"
        data-headlessui-state="open"
        data-open=""
        id="headlessui-menu-items-:r9:"
        role="menu"
        style="position: absolute; left: 0px; top: 0px; --button-width: 0px; overflow: auto; max-width: 0px; max-height: min(var(--anchor-max-height, 100vh), 0px);"
        tabindex="0"
      >
        <button
          class="item"
          data-headlessui-state=""
          id="headlessui-menu-item-:rc:"
          role="menuitem"
          tabindex="-1"
          type="button"
        >
          Edit
        </button>
        <button
          class="item"
          data-headlessui-state=""
          id="headlessui-menu-item-:rd:"
          role="menuitem"
          tabindex="-1"
          type="button"
        >
          Delete
        </button>
      </div>
    </div>
  </div>
</body>
`;
